@@ -6,7 +6,6 @@ q.3.x:
 - add a "changed" signal to the EntryStore - requires all methods to
   be atomic (can't call add_entry() etc directly, since it triggers
   the signal repeatedly)
-- quicksearch entry in the toolbar
 - add import/export of PasswordSafe files
 
 0.4.x:
